Ya funciona por completo la función de nuevos archivos, guardado y apertura. Además, no es necesario seleccionar el archivo y ruta en la qué guardar cuando se guarda un archivo ya existente.
Se implementó la funcionalidad de cerrar archivos, pero aún no funciona del todo.

--- a/src/main/java/editor/Editor.form
+++ b/src/main/java/editor/Editor.form
@@ -180,6 +180,9 @@
               </SubComponents>
             </Container>
             <Container class="javax.swing.JTabbedPane" name="panelCodigo">
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelCodigoMousePressed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="210" y="0" width="630" height="500"/>
